<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="handler"
            type="jc.electiva.afinal.LoginActivity"/>
    </data>

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        tools:context="jc.electiva.afinal.LoginActivity">

        <FrameLayout android:layout_height="@dimen/login_img">


            <ImageView
                android:layout_height="@dimen/login_img"
                android:layout_width="match_parent"
                android:src="@drawable/carrito2"
                android:scaleType="centerCrop" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido_a_compraya"
                android:layout_gravity="bottom"
                android:textColor="@color/Blanco"

                />


        </FrameLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/separacion">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/usuario" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/password" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TableRow>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:text="@string/registrate" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button"
                android:width="80dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/entrar"
                android:onClick="@{()-> handler.goToMain()}"
                android:background="@color/colorAccent"
                android:textColor="@color/Negro"

                />
        </TableRow>

    </TableLayout>
</layout>

